	Added check to ParallelSequence which looks to see if the sequence
		is being run nested or in parallel, both no-nos.
	Revised Tutorial3 to explain anonymous classes to those inexperienced
		with them.
	Changed the constructors of SimpleEdgePortrayal3D to match the ones
		from SimpleEdgePortrayal2D; and just as in SimpleEdgePortrayal2D,
		one can have the line painted with 2 colors.
	Changed the insides of Arrow: the hight of the arrow head cone used to 
		be independent of the arrow length; now we test for the case 
		when the arrow head gets to be larger than the whole thing and 
		make the head a fraction of the total length. Also, the components 
		(the cyclinder tail and cone head) are now accessible.	
	Created GenericEdgePortrayal3D, that takes any java3D Node and
		streches it between every pair of vertices where there's an edge.
	Created subclasses of GenericEdgePortrayal3D:
		ArrowEdgePortrayal3D, ConeEdgePortrayal3D, CylingerEdgePortrayal3D
		and Shape3DEdgePortrayal3D.
	When the simulation was stopped, charts would disappear.  (Fixed).
	Slight speed tweaks to Bag, IntBag, and DoubleBag remove(...).
        javac has grown up and jikes has fallen into disrepair.  We move
                ECJ's default compiler to javac -target 1.3 -source 1.3
	Updates to MersenneTwisterFast
	Added indent to make dist
	Tweaks to make jar so we add a manifest which fires up a default form
		of MASON if double-clicked on.
	Modified Display2D's checking for iText so it doesn't bomb if iText isn't
		there!
	Bug fix so the options button on Display3D appears properly
	Added log-axes check boxes to ChartGenerator
	Fixed import statements in Display3D to eliminate an ambiguity error:
		[Console: sim.display / java.io]
	HistogramSeriesAttributes: replaced the call to getSeriesPaint() with
		getItemPaint(), in order to make it work with version 1.0.6 of 
		jfreechart, while keeping it backward compatible 
		(tested with version 1.0.1 of jfreechart).
		